[package]
description = "A library for reading and writing GFF files with Exon."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-gff"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.18.0" }
futures = { workspace = true }
noodles = { workspace = true, features = ["gff", "core"] }
object_store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
exon-test = { path = "../exon-test" }
