[package]
description = "GTF datasource for Exon"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-gtf"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.26.0" }
futures = { workspace = true }
noodles = { workspace = true, features = ["gtf"] }
object_store = { workspace = true }
tokio = { workspace = true }
