[package]
description = "Exon MzML"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-mzml"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
base64 = { version = "0.22" }
byteorder = { version = "1.5.0" }
exon-common = { path = "../exon-common", version = "0.30.1" }
flate2 = { version = "1.0.30" }
futures = { workspace = true }
object_store = { workspace = true }
quick-xml = { version = "0.36.1", features = [
  "async-tokio",
  "serialize",
  "overlapped-lists",
] }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true, features = ["fs"] }
