[package]
name = "exon-py"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exon = { path = "../exon-core" }
datafusion = { workspace = true }
arrow = { workspace = true, features = ["pyarrow"] }
pyo3 = "0.20"
