[package]
description = "Exon SAM"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "exon-sam"
readme.workspace = true
repository.workspace = true
version = { workspace = true }

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.19.0" }
futures = { workspace = true }
itertools = "0.12.1"
noodles = { workspace = true, features = [
  "core",
  "async",
  "bam",
  "sam",
  "bgzf",
] }
object_store = { workspace = true }
tokio = { workspace = true }
