[package]
name = "exon-sdf"
description = "Exon SDF"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
exon-common = { path = "../exon-common", version = "0.32.3" }
object_store = { workspace = true }
regex = "1"
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
harness = false
name = "sdf"
path = "benches/sdf.rs"
